--- a/index.html
+++ b/index.html
@@ -483,22 +483,47 @@
 	            <div class="uk-card-body">
 	                <h3 class="uk-card-title">Application Windows de gestion de CVthèque</h3>
 	                <p>
-	                	Réaliser une Application Windows de gestion de CVthèque utilisant C sharp,Sqlserver,UML,Merise De 1ère Septembre 2017 à 31 Octobre
-						---------------
-						I create the application from scratch using c sharp, SQL server, uml, merise
-						-----------
-						The Application includes all of:
-						1-Login and registration system using file manipulation features in c sharp including (add new users, delete a user, change password, login).
-						2-Use a Modern UI called MetroFramework
-						3-Manipulate Exceptions and Errors using the features of OOP(Object-oriented programming) 
-						4-Create and Manage and Design the Database using UML, MERISE, and the features of SQL server
-						5-Create a form for adding candidates includes add pdf file (CV) into a database in SQL server
-						6-Create a Crud System for Candidates
-						(insert,update,delete,select)
-						7-Create Search System to search candidates with specific conditions
-						8-Use Visual Studio features to add a pdf viewer in the search results form
-						9-Create an E-mail sending system to contact candidates via their e-mail
-						10-Export search results in Excel file
+	                	<ol type="A">
+	                		<li>Réaliser une Application Windows de gestion de CVthèque utilisant C sharp,Sqlserver,UML,Merise De 1ère Septembre 2017 à 31 Octobre</li>
+	                		<li>
+	                			I create the application from scratch using c sharp, SQL server, uml, merise
+	                		</li>
+	                		<li>
+	                			The Application includes all of:
+	                		</li>
+	                		<li>
+	                			Login and registration system using file manipulation features in c sharp including (add new users, delete a user, change password, login).
+	                		</li>
+	                		<li>
+	                			Use a Modern UI called MetroFramework
+	                		</li>
+	                		<li>
+	                			Manipulate Exceptions and Errors using the features of OOP(Object-oriented programming) 
+	                		</li>
+	                		<li>
+	                			Create and Manage and Design the Database using UML, MERISE, and the features of SQL server
+	                		</li>
+	                		<li>
+	                			Create a form for adding candidates includes add pdf file (CV) into a database in SQL server
+	                		</li>
+	                		<li>
+	                			Create a Crud System for Candidates
+						        (insert,update,delete,select)
+	                		</li>
+	                		<li>
+	                			Create Search System to search candidates with specific conditions
+	                		</li>
+	                		<li>
+	                			Use Visual Studio features to add a pdf viewer in the search results form
+	                		</li>
+	                		<li>
+	                			Create an E-mail sending system to contact candidates via their e-mail
+	                		</li>
+	                		<li>
+	                			Export search results in Excel file
+	                		</li>
+	                	</ol>
+	              
 					</p>
 	            </div>
       		</div>	
