--- a/projects/fish/index.html
+++ b/projects/fish/index.html
@@ -341,7 +341,7 @@
 	        	Imzoughene Youssef
 	        	</a>
 	        	<br>
-	        	<div class="">
+	        	<div class="uk-padding">
 	        		<img width="90" height="90" src="../../images/cv.jpg"><!-- class="uk-border-circle"  -->
 	        	</div>
 	        	<p class="uk-text-large uk-text-success">
