--- a/projects/flotte/index.html
+++ b/projects/flotte/index.html
@@ -331,7 +331,7 @@
 	</div>
 
 
-	<div class="uk-child-width-expand@s uk-text-center" uk-grid <br>>
+	<div class="uk-child-width-expand@s uk-text-center" uk-grid id="myheader">
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body ">
 	        	<a href="https://imzoughene.netlify.com/" 
@@ -340,7 +340,7 @@
 	        	Imzoughene Youssef
 	        	</a>
 	        	<br>
-	        	<div class="">
+	        	<div class="uk-padding">
 	        		<img width="90" height="90" src="../../images/cv.jpg"><!-- class="uk-border-circle"  -->
 	        	</div>
 	        	<p class="uk-text-large uk-text-success">
