add border radius to my image

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
 			background-color: black;
 			padding: 13px;
 			color: white;
-			font-family: 'Dancing Script', cursive;   
+			font-family: 'Dancing Script', cursive;
+			box-shadow: 0.4px 7px gray;
+			border: 1.5px solid white;   
 
 		}
-
+		.radius-white{
+			border-radius: 50%;
+			background-color: white;
+			display: inline-table;
+		}
 	</style>
 </head>
 <body>
@@ -369,7 +375,7 @@
 	        	Imzoughene Youssef
 	        	</a>
 	        	<br>
-	        	<div class="uk-padding">
+	        	<div class="uk-padding radius-white">
 	        		<img width="90" height="90" src="images/cv.jpg"><!-- class="uk-border-circle"  -->
 	        	</div>
 	        	<p class="uk-text-large uk-text-success">
