bunch of updates

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Imzoughene</title>
 	<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
 	<link rel="stylesheet" type="text/css" href="css/google.css">
+    <link rel="shortcut icon" href="favicon.ico">  
 
 	<style type="text/css">
 		.thumbnail-img-class{
@@ -429,9 +430,10 @@
 				            </div>
 				            <div class="uk-card-body">
 				                <h3 class="uk-card-title">
-				                	site commercial pour les porteurs des metiers et des compétences # Complete Website via Angular & Firebase & UiKit
+				                	site commercial pour les porteurs des metiers et des compétences 
 								</h3>
 				                <p>
+				                	# Complete Website via Angular & Firebase & UiKit
 				                	projetComplete Website via Angular & Firebase & UiKit 
 									A website for self practicing purpose only
 
@@ -531,20 +533,12 @@
 	            </div>
 	            <div class="uk-card-body">
 	                <h3 class="uk-card-title">Console Apps via Java | Eclipse</h3>
-	                <p>1- Pizza Orders |
-						* The user should enter his favorite topping then he will get a message about the availability of his chosen topping in our pizza
-						2-Guess the Number
-						* The user must guess a random number between 0 and 9 then he will get a message contain the right number
-						3-scissors paper rock console game
-						* A console application of the famous game of scissors,paper,rock
-						4-Friends raffle game
-						* The user enter a number of his friends names and the computer choose randomly one of them to be the winner
-						5-trivias king Game
-						the user's answers several questions and get rewarded with 50 $ for each correct answer,however get lose 50 $ for each wrong answer
-
-						-----------------
+	                <p>
 						The console apps covers all principal concepts of java programming like objects,constructors,inheritance,polymorphism
 					</p>
+					<a href="#" target="_blank">
+						<button class="uk-button uk-button-primary">Afficher</button>
+					</a>
 	            </div>
       		</div>		   
       		 </div>
@@ -560,6 +554,9 @@
 		                <h3 class="uk-card-title">Draw funny shapes via python and sublime text</h3>
 		                <p>Draw funny shapes via python and sublime text
 						</p>
+						<a href="#" target="_blank">
+						<button class="uk-button uk-button-primary">Afficher</button>
+				    	</a>
 		            </div>
       			</div>		    
       	</div>
@@ -572,14 +569,11 @@
 			                <h3 class="uk-card-title">CvThèque Web Application</h3>
 			                <p>
 			                	CvThèque Web Application
-								using :
-								->Laravel
-								->Axios
-								->Bootstrap
-								->Vue Js
-								->Sweet Alert 2
-								->Vee-validate
+							
 							</p>
+							<a href="#" target="_blank">
+					    	<button class="uk-button uk-button-primary">Afficher</button>
+				        	</a>
 			            </div>
       			</div>		  
       	</div>
@@ -593,6 +587,9 @@
 	                <p>
 	                	a C#.Net POS Application | Restaurant point-of-sale
 					</p>
+					<a href="#" target="_blank">
+						<button class="uk-button uk-button-primary">Afficher</button>
+					</a>
 	            </div>
       		</div>		   
    	    </div>
@@ -606,16 +603,10 @@
 	            </div>
 	            <div class="uk-card-body">
 	                <h3 class="uk-card-title">Object Oriented PHP By Building a Complete Website</h3>
-	                <p>projetThis Project is a Functional website with OOP PHP.
-						............
-						-* built a shareboard application
-						-* built a complete mvc framework from scratch
-						-* built a complete login and registration system
-						-* creating a mysql database with phpmyadmin
-						-* building a database class to connect and interact with mysql
-						-* fetching data with php
-						-* inserting data with php
-						-* created multiple classes|objects and integrated into my application
+	                <p>This Project is a Functional website with OOP PHP.
+					<a href="#" target="_blank">
+						<button class="uk-button uk-button-primary">Afficher</button>
+					</a>
 
 					</p>
 	            </div>
@@ -632,14 +623,11 @@
 	            <div class="uk-card-body">
 	                <h3 class="uk-card-title">Simple Bootstrap Website</h3>
 	                <p>Simple Bootstrap website including :
-						-*> a navigation bar 
-						-*> a home page 
-						-*> a footer section
-						-*> a header section
-						-*> a gallery page 
-						-*> an about us page
-						-*> a contact us page including a form to send comments
+					
 					</p>
+					<a href="#" target="_blank">
+						<button class="uk-button uk-button-primary">Afficher</button>
+					</a>
 	            </div>
       	</div>	
 
