--- a/projects/flotte/index.html
+++ b/projects/flotte/index.html
@@ -396,7 +396,7 @@
 	    <div>
 	        <div class="uk-card uk-card-default uk-card-body">
 	        	 <video width="100%" height="350" controls="true">
-				 <source src="#" type="video/webm">
+				 <source src="videos/Plateforme de gestion de flote.mp4" type="video/webm">
 				  Your browser does not support the video tag.
 				 </video> 
 	        </div>
